<resources>
    <string name="app_name">宿料</string>
    <string name="version">0.0.0</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_login_in">登录</string>
    <string name="title_activity_main_frame">MainFrameActivity</string>
    <string name="title_home">主页</string>
    <string name="title_my_info">我的</string>
    <string name="title_test">测试</string>
    <string name="title_dor">宿舍</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">设置</string>

    <string name="navigation_bottom_height">56dp</string>

    <!--pay-->
    <string name="pay_dor">05栋/308室</string>
    <string name="pay_power">充电费</string>
    <string name="pay_water">充水费</string>
    <string name="pay_default_hint">默认宿舍</string>
    <string name="pay_card_bind">校园卡认证</string>
    <string name="pay_notes">节约用水 人人有责</string>
    <!--register and login-->
    <string name="input_logname">手机号/用户名/邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次确认密码</string>
    <string name="input_sch">学校</string>
    <string name="input_bui">宿舍楼</string>
    <string name="input_dor">宿舍</string>
    <string name="input_stu_id">学号</string>
    <string name="input_maj">专业</string>
    <string name="input_sex">性别</string>

    <string-array name="school_list">
        <item>01 南京师范大学</item>
    </string-array>

    <!--Events-->
    <string name="event_title">标题</string>
    <string name="event_type">类型</string>
    <string name="event_room">宿舍</string>
    <string name="event_note">备注</string>

    <string-array name="event_type_list">
        <item>表扬</item>
        <item>批评</item>
        <item>普通</item>
    </string-array>

    <string name="event_default_title">宿舍卫生良好</string>
    <string name="event_default_date">2019-3-3 10:00:00</string>
    <string name="event_default_dors">306,308,310,312,314</string>
    <string name="event_default_note">再接再厉!</string>
    <string name="event_default_tag">表扬</string>

    <string-array name="event_title_list">
        <item>宿舍卫生优秀</item>
        <item>宿舍卫生待改进</item>
        <item>使用违章电器</item>
    </string-array>


    <!--fragment_home-->
    <string name="home_cha_le_ma">查房了吗</string>
    <string name="home_chalema_default">正在查房，赶紧来打卡签到吧 </string>
    <string name="home_meicha">没有哦</string>
    <string name="home_zhengzaicha">正在查房!</string>
    <string name="home_events">宿舍公告牌</string>
    <string name="home_events_more">查看更多</string>
    <string name="home_ayisaying">阿姨的话</string>

    <!--fragment_my_info-->
    <string name="my_info_detail">详细信息</string>
    <string name="my_info_payment">宿舍缴费</string>
    <string name="my_info_setting">应用设置</string>
    <string name="my_info_about">关于作者</string>
    <string name="my_info_default_name">unknown</string>
    <string name="my_info_default_desc">unknown|unknown|unknown</string>

    <!--fragement_dor -->
    <string name="dor_building">宿舍楼</string>
    <string name="dor_my_dor">我的宿舍</string>

    <!--fragment_dor_building-->
    <string name="dor_bui_find_people">找人</string>
    <string name="dor_bui_post">都在说啥?</string>
    <string name="post_default_name">王小E</string>
    <string name="post_default_date">2019-1-1 10:10:10</string>
    <string name="post_default_content">两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花两开花</string>
    <string name="default_dor">308</string>

    <!--activitiy_add_post-->
    <string name="add_post_hint">说两句...</string>

    <string name="post_tag_ayi">阿姨</string>
    <!--fragment_dor_my_dor-->
    <string name="dor_my_mates">我的舍友</string>
    <string name="dor_my_pay">水电费查询</string>
    <string name="dor_my_pay_desc">上次充值时间：%s\n 查询结果 水费:%s 电费:%s</string>
    <string name="dor_my_event">事件</string>
    <string name="dormate_default_descr">学习如风，常伴我身</string>
    <string name="dor_my_more">查看更多</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
