<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_event_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_smile_black_24dp" />

            <TextView
                android:id="@+id/item_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/event_default_title"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginStart="4dp"/>
            <TextView
                android:id="@+id/item_event_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="表扬"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:background="@color/app_color_blue"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/item_event_date"
                style="@style/StDateItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/event_default_date" />


        </LinearLayout>

        <TextView
            android:id="@+id/item_event_dors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:textSize="16sp"
            android:textColor="@color/qmui_config_color_gray_2"
            android:text="@string/event_default_dors" />

        <TextView
            android:id="@+id/item_event_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:textSize="14sp"
            android:textColor="@color/qmui_config_color_gray_2"
            android:text="@string/event_default_note" />



    </LinearLayout>

</LinearLayout>
