<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DorMyDorFragment"
    android:background="@color/colorBg">

    <!-- TODO: 水电费接口、宿舍事件、最近访客（？ -->

    <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
        android:id="@+id/pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/dor_my_dor_layout_mates"
                    style="@style/StTitleBG"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/dor_my_dor_text_mates"
                        style="@style/StCommonTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dor_my_mates" />
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/dor_my_dor_mates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dor_my_dor_layout_pay"
                    style="@style/StTitleBG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/dor_my_dor_text_pay"
                        style="@style/StCommonRowTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dor_my_pay" />

                    <View
                        android:id="@+id/view_div"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/qmui_config_color_gray_6" />

                    <TextView
                        android:id="@+id/dor_my_pay_detail"
                        style="@style/StDateItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingMultiplier="1.2"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dor_my_pay_desc"
                        android:textColor="@color/qmui_config_color_gray_1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dor_my_dor_layout_event"
                    style="@style/StTitleBG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            style="@style/StCommonTitle"
                            android:id="@+id/dor_my_dor_text_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dor_my_event" />
                        <TextView
                            style="@style/StDateItem"
                            android:id="@+id/dor_my_dor_text_event_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/dor_my_more" />
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/dor_my_dor_events"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>



    </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>

</LinearLayout>