<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg"
        android:fillViewport="true">

        <!-- TODO: 主页：完善UI后数据接口 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/home_layout_chalema"
                style="@style/StTitleBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_title_chalema"
                    style="@style/StCommonRowTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/home_cha_le_ma" />

                <!--竖分割线-->
                <View
                    android:id="@+id/view_div"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@color/qmui_config_color_gray_6" />

                <TextView
                    android:id="@+id/home_chalema_detail"
                    style="@style/StDateItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/home_chalema_default" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_layout_events"
                style="@style/StTitleBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_title_events"
                    style="@style/StCommonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_events" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_recycle_events"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_layout_ayisaying"
                style="@style/StTitleBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/home_title_ayisaying"
                    style="@style/StCommonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_ayisaying" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/home_ayi_posts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
   </android.support.v4.widget.NestedScrollView>

</FrameLayout>